@@ -1,4 +1,0 @@
-$NetBSD: distinfo,v 1.3 2004/03/30 22:26:58 xtraeme Exp $
-
-SHA1 (streamtuner-live365-0.3.4.tar.gz) = 63ead98839f493c4a5611d12b3e1f6d3440d0a09
-Size (streamtuner-live365-0.3.4.tar.gz) = 301371 bytes
